# czbi-invenio

./: .gitignore  .npmrc  invenio.cfg  pyproject.toml  variables
assets/less/site/globals/: site.variables
bioset/: .copier-answers.yml  __init__.py  metadata.yaml  model.py
datasets/: activity_collection.yaml  activity_image_acquisition.yaml  activity_image_analysis.yaml  activity_image_processing.yaml  activity_sample_preparation.yaml  activity_synthesis.yaml  metadata.yaml
models/datasets/: .copier-answers.yml  activity_growth_protocol.yaml  metadata.yaml  model.py
sample_data/: complete_metadata_sample.json
templates/: footer.html  header.html
templates/semantic-ui/invenio_app_rdm/: intro_section.html
testequipment/: .copier-answers.yml  __init__.py  metadata.yaml  model.py  serializers.py
translations/: messages.pot
translations/en/LC_MESSAGES/: messages.mo  messages.po
ui/bioset/: __init__.py  webpack.py
ui/bioset/semantic-ui/js/bioset/forms/: FormsFieldsContainer.jsx
ui/datasets/: __init__.py  webpack.py
ui/datasets/semantic-ui/js/datasets/details/: DetailsContainer.jsx  index.js
ui/datasets/semantic-ui/js/datasets/forms/: CBirdSections.js  FormFieldsContainer.jsx  index.js
ui/datasets/templates/semantic-ui/datasets/record_detail/: main.html
ui/testequipment/: __init__.py  webpack.py
ui/testequipment/semantic-ui/js/testequipment/forms/: FormFieldsContainer.jsx  index.js
