[project]
name = "czbi-c-bird_invenio_repository"
version = "1.0.0"
description = "Czech bioimaging repository"
packages = []
authors = []
dependencies = [
    "json5",
    "oarepo[s3,rdm]==14.1.1",
    "oarepo-dashboard==2.0.0.dev4",
    "oarepo-glitchtip==1.1.1",
    "oarepo-invenio-typing-stubs==0.1.29",
    "oarepo-model==0.1.0.dev51",
    "oarepo-rdm==1.0.0.dev44",
    "oarepo-runtime==2.0.0.dev59",
    "oarepo-theme==1.0.0.dev7",
    "oarepo-ui==6.0.0.dev33",
    "python-dotenv",
    "marshmallow-i18n-messages",
    "oarepo-glitchtip==1.*",
]
requires-python = ">=3.13,<3.14"

[project.entry-points."invenio_assets.webpack"]
i18n = "i18n.webpack:theme"
components = "ui.components.webpack:theme"
ui_datasets = "ui.datasets.webpack:theme"
ui_testequipment = "ui.testequipment.webpack:theme"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"

[project.entry-points."invenio_db.alembic"]
repository = "common:alembic"

[project.entry-points."invenio_base.blueprints"]
ui_datasets = "ui.datasets:create_blueprint"
ui_testequipment = "ui.testequipment:create_blueprint"

[project.entry-points."invenio_base.finalize_app"]
ui_datasets = "ui.datasets:finalize_app"
ui_testequipment = "ui.testequipment:finalize_app"

[tool.uv.build-backend]
module-root = ""
module-name = [
    "common",
    "i18n",
    "ui",
    "datasets",
    "testequipment",
]

[build-system]
requires = [
    "uv_build>=0.8.7,<0.9.0",
]
build-backend = "uv_build"
