[project]
name = "czbi-c-bird_invenio_repository"
version = "1.0.0"
description = "Czech bioimaging repository"
packages = []
authors = []
dependencies = [
    "oarepo[s3,rdm]>=14.2.1b10.dev6,<15.0.0",
    "oarepo-app[production]==2.3.0",
#   "oarepo-runtime>=2.0.0dev59,<3.0.0",
#    "oarepo-model>=0.1.0dev53,<1.0.0",
    "json5",
#    "oarepo[s3,rdm]>=14.0.0,<=14.2.0",
#    "oarepo-ui>=6.0.0dev0,<7.0.0",
#    "oarepo-rdm>=1.0.0dev46,<2.0.0",
#    "oarepo-theme>=1.0.0dev7,<2.0.0",
#    "oarepo-dashboard>=2.0.0dev4,<3.0.0",
#    "oarepo-oidc-einfra>=2.0.0dev4,<3.0.0",
    "python-dotenv",
    "marshmallow-i18n-messages",
#    "oarepo-glitchtip==1.*",
]
requires-python = ">=3.14,<3.15"

[project.entry-points."invenio_assets.webpack"]
i18n = "i18n.webpack:theme"
components = "ui.components.webpack:theme"
ui_datasets = "ui.datasets.webpack:theme"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"

[project.entry-points."invenio_db.alembic"]
repository = "common:alembic"

[project.entry-points."invenio_base.blueprints"]
ui_datasets = "ui.datasets:create_blueprint"

[project.entry-points."invenio_base.finalize_app"]
ui_datasets = "ui.datasets:finalize_app"

[tool.uv.build-backend]
module-root = ""
module-name = [
    "common",
    "i18n",
    "ui",
    "datasets",
]

[build-system]
requires = [
    "uv_build>=0.8.7,<0.9.0",
]
build-backend = "uv_build"
