[project]
name = "czbi-c-bird_invenio_repository"
version = "1.0.0"
description = "Czech bioimaging repository"
packages = []
authors = []
dependencies = [
    "oarepo[s3,rdm]>=14.2.1b10.dev6,<15.0.0",
    "oarepo-app[production,ccmm]==4.0.0",
    "json5",
    "python-dotenv",
    "marshmallow-i18n-messages",
]
requires-python = ">=3.14,<3.15"

[project.entry-points."invenio_assets.webpack"]
i18n = "i18n.webpack:theme"
components = "ui.components.webpack:theme"
ui_datasets = "ui.datasets.webpack:theme"

[project.entry-points."invenio_i18n.translations"]
translations = "i18n"

[project.entry-points."invenio_db.alembic"]
repository = "common:alembic"

[project.entry-points."invenio_base.blueprints"]
ui_datasets = "ui.datasets:create_blueprint"

[project.entry-points."invenio_base.finalize_app"]
ui_datasets = "ui.datasets:finalize_app"

[tool.uv.build-backend]
module-root = ""
module-name = [
    "common",
    "i18n",
    "ui",
    "models",
]

[build-system]
requires = [
    "uv_build>=0.8.7,<0.9.0",
]
build-backend = "uv_build"
